# ros2_path_planning

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
examples/: planner_client_customized.py  planner_client_timed.py
ros2_path_planning/: planner_service.py
srv/: PlanTrajectory.srv
